focus contact navitem

--- a/src/components/Header/NavItemContact.astro
+++ b/src/components/Header/NavItemContact.astro
@@ -6,5 +6,9 @@
 
     padding: 6px 18px;
     border-radius: 100px;
+
+    &:focus {
+      @apply outline outline-offset-[2px] outline-[3px] outline-secondary;
+    }
   }
 </style>
