--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 import Grid from "./@common/Grid.astro";
 import CallToAction from "./@common/CallToAction.astro";
-import NavItem from "./Header/components/NavItem.astro";
+import NavItem from "./Header/NavItem.astro";
 ---
 
 <footer id="footer" class="container mb-[60px] lg:mb-[70px]">
