--- a/src/components/Header/NavItems.astro
+++ b/src/components/Header/NavItems.astro
@@ -1,7 +1,7 @@
 ---
 import { slugify } from "../../scripts/helpers/slugify";
-import NavItem from "./components/NavItem.astro";
 import Icon from "../@common/Icon.astro";
+import NavItem from "./NavItem.astro";
 
 interface Props {
   title: string;
