--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -1,10 +1,10 @@
 ---
 import Icon from "../@common/Icon.astro";
+import Grid from "../@common/Grid.astro";
 import Logo from "./Logo.astro";
 import NavItemContact from "./NavItemContact.astro";
-import NavItem from "./components/NavItem.astro";
+import NavItem from "./NavItem.astro";
 import NavItems from "./NavItems.astro";
-import Grid from "../@common/Grid.astro";
 ---
 
 <header
