--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -27,9 +27,10 @@ const backgroundFormCSSClasses = showBackgroundForm
 ---
 
 <section
+  id="contact"
   class:list={[backgroundFormCSSClasses, "scroll-mt-[185px]", cssClasses]}
 >
-  <div id="contact" class="container">
+  <div class="container">
     <Grid>
       <div class="col-span-full lg:col-span-11 2xl:col-start-2 2xl:col-span-8">
         <div
