--- a/src/components/pages/glossaire-ux-design/Glossaire.astro
+++ b/src/components/pages/glossaire-ux-design/Glossaire.astro
@@ -134,7 +134,7 @@ const currentPath = new URL(Astro.url.pathname, Astro.site);
                               <summary class="px-5 py-4 sm:p-8 flex items-center justify-between gap-1.5 cursor-pointer">
                                 <h3
                                   id={definition.slug}
-                                  class="text-headline-small scroll-mt-[220px]"
+                                  class="text-headline-small scroll-mt-[135px] lg:scroll-mt-[280px] 2xl:scroll-mt-[220px]"
                                 >
                                   <span>{definition.term}</span>&nbsp;
                                   {definition.alternative && (
