--- a/src/components/pages/projets/AllProjects/LargeProject/index.astro
+++ b/src/components/pages/projets/AllProjects/LargeProject/index.astro
@@ -42,6 +42,7 @@ const hasManyTestimonials = Array.isArray(project.testimonial);
         ]}
         width={200}
         height={80}
+        alt=""
       />
 
 
