--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -136,7 +136,7 @@ import NavItems from "./NavItems.astro";
     }
 
     &[data-menu-opened="true"] {
-      @apply bg-surface2;
+      @apply bg-surface2 !important;
 
       & #menu-opener {
         @apply gap-2.5 text-primary bg-surface5;
