fix italic testimonial

--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -56,7 +56,7 @@ const { viewMode = "block", testimonial } = Astro.props;
           class="text-body-medium-bold"
         >
           {testimonial.author}
-          <cite>
+          <cite class="not-italic">
             <span class="text-primary">&nbsp;{testimonial.company}</span>
           </cite>
         </footer>
