--- a/src/components/pages/nos-deux-profils/Profiles.astro
+++ b/src/components/pages/nos-deux-profils/Profiles.astro
@@ -20,7 +20,7 @@ import Profile from "./Profile.astro";
         >
           <Brush
             id="1"
-            class="absolute z-[-1] w-[129px] lg:w-[142px] left-0 bottom-0 rotate-[180deg]"
+            class="absolute z-[-1] w-[129px] lg:w-[142px] left-[13px] bottom-0 rotate-[180deg]"
           />
           <Yuna
             width={82}
@@ -39,7 +39,7 @@ import Profile from "./Profile.astro";
         >
           <Brush
             id="2"
-            class="absolute z-[-1] w-[129px] lg:w-[164px] left-0 bottom-[11px] rotate-[90deg]"
+            class="absolute z-[-1] w-[129px] lg:w-[164px] left-[10px] bottom-[11px] rotate-[90deg]"
           />
           <Daniela
             width={82}
