--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Footer from "../components/Footer.astro";
 
 <Layout
   title="Team UX ▷ 2 designers UX en freelance à Bordeaux"
-  decription="Nous sommes Yuna & Daniela, l'extension UX de votre équipe produit. Nous adorons (dé)construire des produits complexes. ✓ UX design ✓ Éco-conception ✓ Accessibilité"
+  description="Nous sommes Yuna & Daniela, l'extension UX de votre équipe produit. Nous adorons (dé)construire des produits complexes. ✓ UX design ✓ Éco-conception ✓ Accessibilité"
   og_title="Découvrez Team UX 👋🏻 👋🏼  Design UX en freelance"
   og_description="On est Yuna & Daniela, un binôme de designers UX seniors. On adore (dé)construire des produits complexes. ✓ UX/UI design ✓ Éco-conception ✓ Accessibilité Web"
 >
