replace flexbox gap with margin

--- a/src/components/DuoDeChoc.astro
+++ b/src/components/DuoDeChoc.astro
@@ -18,7 +18,7 @@ const { variant } = Astro.props;
         height={249}
         class="absolute z-0 top-0 left-0 rotate-[-90deg] translate-x-[20px] translate-y-[-20px]"
       />
-      <div class="flex justify-center gap-3">
+      <div class="flex justify-center space-x-3">
         <PictureYuna width={85} height={210} class="relative z-10" />
         <PictureDaniela width={85} height={210} class="relative z-10" />
       </div>
@@ -36,7 +36,7 @@ const { variant } = Astro.props;
         class="absolute z-0 top-[-30px] left-0 rotate-[-165.467deg] translate-x-[-10px]"
       />
 
-      <div class="flex gap-4">
+      <div class="flex space-x-4">
         <PictureYuna width={156} height={384} class="relative z-10" />
         <PictureDaniela width={156} height={384} class="relative z-10" />
       </div>
