--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,7 +21,7 @@ import NavItem from "./Header/NavItem.astro";
       </CallToAction>
     </div>
     <nav class="col-span-full lg:col-span-2">
-      <ul class="flex flex-col gap-10 lg:gap-4">
+      <ul class="flex flex-col space-y-10 lg:space-y-4">
         <li>
           <NavItem class="text-label-large" to="/plan-du-site">
             Plan du site
@@ -35,7 +35,7 @@ import NavItem from "./Header/NavItem.astro";
       </ul>
     </nav>
     <div class="col-span-full lg:col-span-2">
-      <ul class="flex flex-col gap-10 lg:gap-4">
+      <ul class="flex flex-col space-y-10 lg:space-y-4">
         <li>
           <NavItem class="text-label-large" to="/glossaire-ux-design">
             Glossaire de l’UX design
