--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -16,7 +16,7 @@ const { viewMode = "block", testimonial } = Astro.props;
 
 {
   viewMode === "block" && (
-    <bloquote class="testimonial flex flex-col gap-5 xl:gap-0 px-5 py-6 lg:p-8 xl:p-[50px] bg-neutral4 rounded-[26px]">
+    <bloquote class="testimonial flex flex-col max-xl:space-y-5 px-5 py-6 lg:p-8 xl:p-[50px] bg-neutral4 rounded-[26px]">
       <p
         lang={testimonial.contentLang ?? undefined}
         class="text-body-medium lg:mt-[50px] mb-auto"
@@ -41,7 +41,7 @@ const { viewMode = "block", testimonial } = Astro.props;
 
 {
   viewMode === "inline" && (
-    <bloquote class="testimonial flex flex-col lg:flex-row gap-6 px-5 py-6 lg:p-10 bg-neutral4 rounded-[26px]">
+    <bloquote class="testimonial flex flex-col lg:flex-row max-lg:space-y-6 lg:space-x-6 px-5 py-6 lg:p-10 bg-neutral4 rounded-[26px]">
       <div class="lg:flex-[0_0_78px] h-[47px] lg:h-[54px] overflow-hidden">
         <span class="block text-primary text-[200px] translate-x-[-12px] translate-y-[-79px]">
           &ldquo;
