--- a/src/components/Header/NavItem.astro
+++ b/src/components/Header/NavItem.astro
@@ -35,7 +35,7 @@ const selected =
     cssClasses,
   ]}
 >
-  <span class:list={["title", { "flex items-center gap-1": hasSubmenu }]}>
+  <span class:list={["title", { "flex items-center space-x-1": hasSubmenu }]}>
     <slot />
   </span>
 
