--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -47,7 +47,7 @@ const { viewMode = "block", testimonial } = Astro.props;
           &ldquo;
         </span>
       </div>
-      <div class="flex flex-col gap-5">
+      <div class="flex flex-col space-y-5">
         <p lang={testimonial.contentLang ?? undefined} class="text-body-medium">
           {testimonial.content}&rdquo;
         </p>
