--- a/src/components/Toast.astro
+++ b/src/components/Toast.astro
@@ -6,7 +6,7 @@ import Icon from "./@common/Icon.astro";
   id="toast"
   role="alert"
   aria-live="assertive"
-  class="fixed flex items-center top-[100%] left-1/2 w-[calc(100%-40px)] sm:w-auto gap-1 sm:gap-2 p-4 sm:px-8 sm:py-4 text-label-medium sm:text-body-medium rounded-md bg-surface6 shadow-[0_2px_4px_0_rgba(8,18,79,0.25)]"
+  class="fixed flex items-center top-[100%] left-1/2 w-[calc(100%-40px)] sm:w-auto space-x-1 sm:space-x-2 p-4 sm:px-8 sm:py-4 text-label-medium sm:text-body-medium rounded-md bg-surface6 shadow-[0_2px_4px_0_rgba(8,18,79,0.25)]"
 >
   <Icon name="check_circle" width={24} height={24} />
   <span class="flex-1"></span>
